--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-cron-generator",
   "description": "a project using vue,element-ui to generate cron expression",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "ldang264 <820704815@qq.com>",
   "license": "MIT",
   "private": false,
@@ -22,6 +22,13 @@
       "git add"
     ]
   },
+  "keywords": [
+    "vue",
+    "element-ui",
+    "i18n",
+    "cron",
+    "crontab"
+  ],
   "dependencies": {
     "element-ui": "^2.5.4",
     "vue": "^2.5.11",
