--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "crontab"
   ],
   "dependencies": {
-    "element-ui": "^2.5.4",
-    "vue": "^2.5.11",
-    "vue-i18n": "^8.8.2"
+    "element-ui": "2.5.4",
+    "vue": "2.5.11",
+    "vue-i18n": "8.8.2"
   },
   "browserslist": [
     "> 1%",
@@ -40,17 +40,17 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.1",
-    "@vue/cli-plugin-eslint": "^3.0.1",
-    "@vue/cli-plugin-unit-mocha": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
-    "@vue/eslint-config-standard": "^3.0.0-beta.10",
-    "@vue/test-utils": "^1.0.0-beta.10",
-    "chai": "^4.1.2",
-    "eslint-plugin-cypress": "^2.0.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "lint-staged": "^6.0.0",
-    "vue-template-compiler": "^2.5.13"
+    "@vue/cli-plugin-babel": "3.0.1",
+    "@vue/cli-plugin-eslint": "3.0.1",
+    "@vue/cli-plugin-unit-mocha": "3.0.1",
+    "@vue/cli-service": "3.0.1",
+    "@vue/eslint-config-standard": "3.0.0-beta.10",
+    "@vue/test-utils": "1.0.0-beta.10",
+    "chai": "4.1.2",
+    "eslint-plugin-cypress": "2.0.1",
+    "less": "2.7.3",
+    "less-loader": "4.0.5",
+    "lint-staged": "6.0.0",
+    "vue-template-compiler": "2.5.11"
   }
 }
